force-app/main/default/objects/Submit_Request__c/Submit_Request__c.object-meta.xml
<CustomObject>
    <label>Submit Request</label>
    <nameField>
        <displayFormat>SR-{00000}</displayFormat>
        <label>Submit Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submit Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>