force-app/main/default/objects/Submit_Request__c/fields/FinalApprovalName__c.field-meta.xml
<CustomField>
    <fullName>FinalApprovalName__c</fullName>
    <formula>$Setup.ApprovalSettings__c.Finance_Approval__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Approver</label>
    <type>Text</type>
</CustomField>