force-app/main/default/objects/Submit_Request__c/fields/FirstApproverName__c.field-meta.xml
<CustomField>
    <fullName>FirstApproverName__c</fullName>
    <label>First Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>