force-app/main/default/objects/Submit_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Status__c</columns>
    <columns>Submited_Date__c</columns>
    <columns>Total_Expense_Amount__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Approver__c</columns>
    <columns>FirstApproverName__c</columns>
    <columns>FinalApprovalName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>All</label>
</ListView>