force-app/main/default/objects/Submit_Request__c/listViews/Submitted_Expense_Reports.listView-meta.xml
<ListView>
    <fullName>Submitted_Expense_Reports</fullName>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Submited_Date__c</columns>
    <columns>Total_Expense_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Requested</value>
    </filters>
    <label>Submitted Expense Reports</label>
</ListView>